All server requests are now encoded properly